# breakout-ai-rs

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
proto/: neat.proto
src/: config.rs  debug_genome.rs  main.rs  play_ai.rs  serialization.rs  test_network.rs  train_cli.rs  training.rs
src/breakout/: engine.rs  mod.rs  render.rs
src/neat/: crossover.rs  mod.rs  mutation.rs  nn.rs  population.rs
