[package]
name = "breakout-ai-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "breakout-game"
path = "src/main.rs"

[[bin]]
name = "breakout-train"
path = "src/train_cli.rs"

[[bin]]
name = "breakout-ai"
path = "src/play_ai.rs"

[dependencies]
macroquad = "0.4.14"
rand = "0.9.2"
rand_distr = "0.5.1"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

[build-dependencies]
prost-build = "0.13"
